--- a/bower.json
+++ b/bower.json
@@ -1,14 +1,10 @@
 {
-  "lib": {
-    "name": "bower-rails generated lib assets",
-    "dependencies": {
-      "angular": "v1.5.3",
-      "angular-ui-router": "latest",
-      "angular-resource": "v1.5.3"
-    }
-  },
-  "vendor": {
-    "name": "bower-rails generated vendor assets",
-    "dependencies": {}
+  "name": "beaches",
+  "dependencies": {
+    "angular": "v1.5.3",
+    "angular-ui-router": "latest",
+    "angular-resource": "v1.5.3",
+    "angular-bootstrap": "^1.3.2",
+    "AngularDevise": "angular-devise#^1.3.0"
   }
 }
