--- a/config/database.yml
+++ b/config/database.yml
@@ -7,25 +7,19 @@
 development:
   adapter: postgresql
   encoding: unicode
-  database: store_development
+  database: seaspot
   pool: 5
-  username: LisaMarie
+  username: administrator
   password:
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
-test:
-  adapter: postgresql
-  encoding: unicode
-  database: store_test
-  pool: 5
-  username: LisaMarie
-  password:
+
 
 production:
   adapter: postgresql
   database: seaspot
   host: localhost
-  username: LisaMarie
+  username: administrator
   password: 
