--- a/config/database.yml
+++ b/config/database.yml
@@ -21,5 +21,5 @@ production:
   adapter: postgresql
   database: seaspot
   host: localhost
-  username: administrator
-  password: 
+  username: <%= ENV['POSTGRES_USERNAME'] %>
+  password: <%= ENV['POSTGRES_PASSWORD'] %>
