--- a/config/database.yml
+++ b/config/database.yml
@@ -9,8 +9,8 @@ development:
   encoding: unicode
   database: seaspot
   pool: 5
-  username: administrator
-  password:
+  username: <%= ENV['POSTGRES_USERNAME'] %>
+  password: <%= ENV['POSTGRES_PASSWORD'] %>
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
